Devops/ex-18/gitops/prod/payment-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment-prod
  labels:
    environment: prod
