Devops/ex-18/gitops/prod/payment-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: payment-prod
  labels:
    app: payment-service
    environment: prod
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: payment-service
  type: ClusterIP
